--- a/14.1.md
+++ b/14.1.md
@@ -5,6 +5,9 @@
 Выполните приведённые ниже команды в консоли, получите вывод команд. Сохраните
 задачу 1 как справочный материал.
 
+<details>
+    <summary>Задание 1</summary>
+
 ### Как создать секрет?
 
 ```
@@ -53,6 +56,7 @@ kubectl delete secret domain-cert
 ```
 kubectl apply -f domain-cert.yml
 ```
+</details>
 
 ## Задача 2 (*): Работа с секретами внутри модуля
 
