HW 14.1 Fix ReadMe.MD

--- a/14.1.md
+++ b/14.1.md
@@ -217,5 +217,9 @@ domain-cert   kubernetes.io/tls   2      3m40s
 
 [Секрет из задания 1](./14.1/stage/domain-cert.yaml)
 
+<details>
+    <summary>Full history</summary>
+![](./14.1/ReadMe.md)
+</details>
 
 ---
