--- a/14.1.md
+++ b/14.1.md
@@ -219,7 +219,12 @@ domain-cert   kubernetes.io/tls   2      3m40s
 
 <details>
     <summary>Full history</summary>
+
 ![](./14.1/ReadMe.md)
+
+<!-- MARKDOWN-AUTO-DOCS:START (CODE:src=./14.1/ReadMe.md) -->
+<!-- MARKDOWN-AUTO-DOCS:END -->
+
 </details>
 
 ---
