HW 14.1 Fix ReadMe.MD

--- a/14.1.md
+++ b/14.1.md
@@ -220,10 +220,7 @@ domain-cert   kubernetes.io/tls   2      3m40s
 <details>
     <summary>Full history</summary>
 
-![](./14.1/ReadMe.md)
-
-<!-- MARKDOWN-AUTO-DOCS:START (CODE:src=./14.1/ReadMe.md) -->
-<!-- MARKDOWN-AUTO-DOCS:END -->
+[История выполнения задания 1 и 2](./14.1/ReadMe.md)
 
 </details>
 
