--- a/14.3.md
+++ b/14.3.md
@@ -52,6 +52,10 @@ kubectl delete configmap nginx-config
 kubectl apply -f nginx-config.yml
 ```
 
+
+<details>
+    <summary>Решение задачи 1</summary>
+
 ```
 iva@c9v:~/Documents/14/clokub-homeworks/14.3  (HW-14.2)$ kubectl create configmap nginx-config --from-file=nginx.conf
 configmap/nginx-config created
@@ -142,8 +146,26 @@ iva@c9v:~/Documents/14/clokub-homeworks/14.3/out  (HW-14.2)$ kubectl apply -f ng
 configmap/nginx-config created
 
 iva@c9v:~/Documents/14/clokub-homeworks/14.3/out  (HW-14.2)$ 
+iva@c9v:~/Documents/14/clokub-homeworks  (HW-14.3)$ kubectl get configmaps
+NAME               DATA   AGE
+domain             1      30m
+kube-root-ca.crt   1      3d13h
+nginx-config       1      28m
+
+.....
+iva@c9v:~/Documents/14/clokub-homeworks  (HW-14.3)$ kubectl delete configmaps nginx-config
+configmap "nginx-config" deleted
+iva@c9v:~/Documents/14/clokub-homeworks  (HW-14.3 *)$ kubectl delete configmaps domain
+configmap "domain" deleted
+iva@c9v:~/Documents/14/clokub-homeworks  (HW-14.3 *)$ kubectl get configmaps
+NAME               DATA   AGE
+kube-root-ca.crt   1      3d13h
+
 
 ```
+
+</details>
+
 
 ## Задача 2 (*): Работа с картами конфигураций внутри модуля
 
