--- a/14.4.md
+++ b/14.4.md
@@ -184,6 +184,56 @@ cat ~/.kube/config
 kubectl cluster-info
 ```
 
+
+<details>
+    <summary>Решение задачи 2*</summary>
+
+
+```
+iva@c9v:~/Documents/14/clokub-homeworks  (HW-14.4)$ kubectl run -i --tty fedora --image=fedora --restart=Never -- sh
+If you don't see a command prompt, try pressing enter.
+sh-5.1# env | grep KUBE
+KUBERNETES_SERVICE_PORT_HTTPS=443
+KUBERNETES_SERVICE_PORT=443
+KUBERNETES_PORT_443_TCP=tcp://10.233.0.1:443
+KUBERNETES_PORT_443_TCP_PROTO=tcp
+KUBERNETES_PORT_443_TCP_ADDR=10.233.0.1
+KUBERNETES_SERVICE_HOST=10.233.0.1
+KUBERNETES_PORT=tcp://10.233.0.1:443
+KUBERNETES_PORT_443_TCP_PORT=443
+sh-5.1# env | grep K8S 
+sh-5.1# env           
+KUBERNETES_SERVICE_PORT_HTTPS=443
+KUBERNETES_SERVICE_PORT=443
+HOSTNAME=fedora
+DISTTAG=f37container
+PWD=/
+FBR=f37
+HOME=/root
+KUBERNETES_PORT_443_TCP=tcp://10.233.0.1:443
+FGC=f37
+TERM=xterm
+SHLVL=1
+KUBERNETES_PORT_443_TCP_PROTO=tcp
+KUBERNETES_PORT_443_TCP_ADDR=10.233.0.1
+KUBERNETES_SERVICE_HOST=10.233.0.1
+KUBERNETES_PORT=tcp://10.233.0.1:443
+KUBERNETES_PORT_443_TCP_PORT=443
+PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+_=/usr/bin/env
+sh-5.1# export K8S=https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_SERVICE_PORT
+sh-5.1# export SADIR=/var/run/secrets/kubernetes.io/serviceaccount
+sh-5.1# export TOKEN=$(cat $SADIR/token)
+sh-5.1# export CACERT=$SADIR/ca.crt
+sh-5.1# export NAMESPACE=$(cat $SADIR/namespace)
+sh-5.1# curl -H "Authorization: Bearer $TOKEN" --cacert $CACERT $K8S/api/v1/
+
+```
+</details>
+
+
+[Результат вывода](./14.4/part2/responce.json)
+
 ---
 
 ### Как оформить ДЗ?
