--- a/14.5.md
+++ b/14.5.md
@@ -15,6 +15,16 @@ kubectl logs security-context-demo
 uid=1000 gid=3000 groups=3000
 ```
 
+## Решение Задачи 1
+
+```
+iva@c9v:~/Documents/14/clokub-homeworks  (HW-14.5)$ kubectl apply -f 14.5/example-security-context.yml
+pod/security-context-demo created
+iva@c9v:~/Documents/14/clokub-homeworks  (HW-14.5)$ kubectl logs security-context-demo
+uid=1000 gid=3000 groups=3000
+
+```
+
 ## Задача 2 (*): Рассмотрите пример 14.5/example-network-policy.yml
 
 Создайте два модуля. Для первого модуля разрешите доступ к внешнему миру
