--- a/15.2.md
+++ b/15.2.md
@@ -9,20 +9,92 @@
 - Создать bucket в Object Storage с произвольным именем (например, _имя_студента_дата_);
 - Положить в bucket файл с картинкой;
 - Сделать файл доступным из Интернет.
+
+* [bucket](./15.2/nlb/bucket.tf)
+
+
 2. Создать группу ВМ в public подсети фиксированного размера с шаблоном LAMP и web-страничкой, содержащей ссылку на картинку из bucket:
 - Создать Instance Group с 3 ВМ и шаблоном LAMP. Для LAMP рекомендуется использовать `image_id = fd827b91d99psvq5fjit`;
 - Для создания стартовой веб-страницы рекомендуется использовать раздел `user_data` в [meta_data](https://cloud.yandex.ru/docs/compute/concepts/vm-metadata);
 - Разместить в стартовой веб-странице шаблонной ВМ ссылку на картинку из bucket;
 - Настроить проверку состояния ВМ.
+
+[instance_group.tf](./15.2/nlb/instance_group.tf)
+[network.tf](./15.2/nlb/network.tf)
+
 3. Подключить группу к сетевому балансировщику:
 - Создать сетевой балансировщик;
 - Проверить работоспособность, удалив одну или несколько ВМ.
+
+[network_load_balancer.tf](./15.2/nlb/network_load_balancer.tf)
+
 4. *Создать Application Load Balancer с использованием Instance group и проверкой состояния.
+
+[Aplication Load Balancer terraform](./15.2/alb/)
+
+[Скрины проверок](./15.2/img/)
+
+
+```
+iva@c9v:~/Documents/14/clokub-homeworks/15.2  (HW-15.2 *)$ tree 
+.
+├── alb
+│   ├── application-load-balancer.tf	-	создаём балансировщик Application 
+│   ├── bucket.tf
+│   ├── instance_group.tf
+│   ├── main.tf
+│   ├── network.tf
+│   ├── sa-account.tf
+│   ├── security_groups.tf		- настраиваем группы доступности
+│   ├── terraform.tfvars
+│   ├── variables.tf
+│   └── versions.tf
+├── img			- результат выполнения 
+│   ├── Alb-01.png
+│   ├── Alb-02.png
+│   ├── Alb-03.png
+│   ├── Bucket-01.png
+│   ├── Bucket-02.png
+│   ├── Bucket-03.png
+│   ├── Bucket-04.png
+│   └── maxresdefault.jpg
+└── nlb
+    ├── bucket.tf	- создание бакета
+    ├── instance_group.tf	 - создаём три инстанса
+    ├── main.tf			 -	параметры для провайдера yandex
+    ├── network_load_balancer.tf - создаём балансировщик
+    ├── network.tf	- создаём сети
+    ├── sa-account.tf 	- создаём сервисный аккаунт
+    ├── terraform.tfvars - переменные окружения
+    ├── variables.tf - описание переменных
+    └── versions.tf - данные для провайдера терраформ
+```
+
+Общие конфигурационные файлы:
+
+* [variables.tf](./15.2/nlb/variables.tf) - указание переменных, используемых в сценарии развертывания;
+* [version.tf](./15.2/nlb/version.tf) - объявление поставщика услуг `yandex-cloud/yandex` ;
+* [sa_account.tf](./15.2/nlb/sa_account.tf) - создание сервисного фккаунта, для настройки группы виртуальных машин и хранилища объекта;
+* [network.tf](./15.2/nlb/network.tf) - описание сети и подсетей;
+
+
+_________________________________________________________________________
 
 Документация
 - [Compute instance group](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/compute_instance_group)
 - [Network Load Balancer](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/lb_network_load_balancer)
 - [Группа ВМ с сетевым балансировщиком](https://cloud.yandex.ru/docs/compute/operations/instance-groups/create-with-balancer)
+- [Загрузка состояний Terraform в Object Storage](https://cloud.yandex.ru/docs/tutorials/infrastructure-management/terraform-state-storage)
+
+Зеркала документации
+- [Computer instance group](https://registry.tfpla.net/providers/yandex-cloud/yandex/latest/docs/resources/compute_instance_group)
+- [Network Load Balancer](https://registry.tfpla.net/providers/yandex-cloud/yandex/latest/docs/resources/lb_network_load_balancer)
+- [Application Load Balancer](https://registry.tfpla.net/providers/yandex-cloud/yandex/latest/docs/resources/alb_load_balancer)
+- [IAM policy for a service account](https://registry.tfpla.net/providers/yandex-cloud/yandex/latest/docs/resources/iam_service_account_iam_binding)
+
+- [Buckets](https://github.com/Ingvar78/devops-netology/tree/main/DevVirt/07-terraform-03-basic)
+
+
 ---
 ## Задание 2*. AWS (необязательное к выполнению)
 
