--- a/15.3.md
+++ b/15.3.md
@@ -7,7 +7,7 @@
 - Создать ключ в KMS,
 - С помощью ключа зашифровать содержимое бакета, созданного ранее.
 
-[Создание ключа и шифрование](./15.3/kms)
+[Создание ключа kms.tf и шифрование в bucket.tf](./15.3/kms)
 
 
 ```
